Устраняет ошибки